--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -355,22 +355,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib.pyplt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-f75e94d8a42a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplt\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib.pyplt'"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplt as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['D3', 'D4', 'D1', 'D6', 'D7', '?', 'D2', 'U', 'Q'], dtype=object)"
+       "<matplotlib.axes._subplots.AxesSubplot at 0xa45a748>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW4AAAD8CAYAAABXe05zAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADhpJREFUeJzt3X+M5PVdx/HXq3fXggw9isBI9ohLYkNCelZ6E6xBmxlM\n9cqR4h/9g6bF1rTZP0wvGDF1idGkfxhPE5tW7R8SimKknRiFtLnrj6BlJE0EnOVH7+DAIj3TbmhP\nQnowxBSvffvHfmuHY2bnM3vz3bn37vORTPY7n/ns9/P+vm/mxex3v7M4IgQAyOMN8y4AADAdghsA\nkiG4ASAZghsAkiG4ASAZghsAkiG4ASAZghsAkiG4ASCZnXXs9JJLLonFxcU6dp3SK6+8ogsuuGDe\nZZzz6FMZ+lQmW59WVlZeiIhLS+bWEtyLi4vq9/t17DqlXq+ndrs97zLOefSpDH0qk61Ptv+rdC6n\nSgAgGYIbAJIhuAEgGYIbAJIhuAEgmaLgtn2R7X+0/bTt47Z/qe7CAACjlV4O+GlJX4mI99l+o6Sf\nqrEmAMA6Jga37d2S3iXpw5IUEa9KerXesgAA45ScKrlS0n9L+hvbj9m+03aejyMBwBbjSf+zYNst\nSQ9Jui4iHrb9aUkvRcQfnjFvSdKSJDWbzX3dbremkvMZDAZqNBpzW//o6qmR43sXdm9yJeubd5+y\noE9lsvWp0+msRESrZG5JcP+MpIciYrG6/yuSliPiwLjvabVawUfef2LeH71dXD4ycvzEobH/hHMx\n7z5lQZ/KZOuT7eLgnniqJCK+K+nbtq+qhn5V0lNnUR8A4CyUXlVyUNI91RUlz0n6rfpKAgCspyi4\nI+JxSUVv4QEA9eKTkwCQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ\n3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQ\nDMENAMkQ3ACQDMENAMnsLJlk+4SklyX9UNLpiGjVWRQAYLyi4K50IuKF2ioBABThVAkAJOOImDzJ\n/pakU1o7VfLXEXHHiDlLkpYkqdls7ut2uzMuNa/BYKBGozG39Y+unho5vndh90zmz8q8+5QFfSqT\nrU+dTmel9DR0aXAvRMSq7csk3S/pYEQ8OG5+q9WKfr9fXPBW1+v11G6357b+4vKRkeMnDh2YyfxZ\nmXefsqBPZbL1yXZxcBedKomI1errSUn3Sbp24+UBAM7GxOC2fYHtC3+8LenXJB2ruzAAwGglV5U0\nJd1n+8fzPxcRX6m1KgDAWBODOyKek/T2TagFAFCAywEBIBmCGwCSIbgBIBmCGwCSIbgBIBmCGwCS\nIbgBIBmCGwCSIbgBIBmCGwCSIbgBIBmCGwCSIbgBIBmCGwCSIbgBIBmCGwCSIbgBIBmCGwCSIbgB\nIBmCGwCSIbgBIBmCGwCSIbgBIBmCGwCSIbgBIJni4La9w/Zjtg/XWRAAYH3TvOO+VdLxugoBAJQp\nCm7beyQdkHRnveUAACYpfcf9KUkfl/SjGmsBABRwRKw/wb5R0g0R8du225J+LyJuHDFvSdKSJDWb\nzX3dbreGcnMaDAZqNBpzW//o6qmR43sXdk81f5xx+5nWen2a9hi2snk/n7LI1qdOp7MSEa2SuSXB\n/SeSbpF0WtJ5kt4s6d6I+OC472m1WtHv98sr3uJ6vZ7a7fbc1l9cPjJy/MShA1PNH2fcfqa1Xp+m\nPYatbN7Ppyyy9cl2cXBPPFUSEbdHxJ6IWJR0s6SvrRfaAIB6cR03ACSzc5rJEdGT1KulEgBAEd5x\nA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0Ay\nBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcA\nJDMxuG2fZ/sR20/YftL2JzajMADAaDsL5vxA0vURMbC9S9LXbX85Ih6quTYAwAgTgzsiQtKgurur\nukWdRQEAxvNaLk+YZO+QtCLp5yR9JiJ+f8ScJUlLktRsNvd1u90Zl5rXYDBQo9GofZ2jq6emmr93\nYXet+5nWen0aV9O0a8/r2GZVvzT982mWa2eyWa+7Wel0OisR0SqZWxTc/z/ZvkjSfZIORsSxcfNa\nrVb0+/3i/W51vV5P7Xa79nUWl49MNf/EoQO17mda6/VpXE3Trj2vY5tV/dL0z6dZrp3JZr3uZsV2\ncXBPdVVJRHxf0gOS9m+kMADA2Su5quTS6p22bJ8v6d2Snq67MADAaCVXlVwu6e7qPPcbJP1DRByu\ntywAwDglV5V8Q9I1m1ALAKAAn5wEgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAG\ngGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQI\nbgBIhuAGgGQIbgBIhuAGgGQmBrftK2w/YPsp20/avnUzCgMAjLazYM5pSbdFxKO2L5S0Yvv+iHiq\n5toAACNMfMcdEc9HxKPV9suSjktaqLswAMBoU53jtr0o6RpJD9dRDABgMkdE2US7IelfJf1xRNw7\n4vElSUuS1Gw293W73VnWmdpgMFCj0Zj6+46unho5vndh91Tzx5nVfqbd/7g1mudLl12c/9hmte64\nNaZ9Pk37PKp7P5tlo6+7EnX0otPprEREq2RuUXDb3iXpsKSvRsQnJ81vtVrR7/dL1t8Wer2e2u32\n1N+3uHxk5PiJQwemmj/OrPYz7f7HrXHb3tM6+IGbZlLTPI9tVuuOW2Pa59O0z6O697NZNvq6K1FH\nL2wXB3fJVSWW9FlJx0tCGwBQr5Jz3NdJukXS9bYfr2431FwXAGCMiZcDRsTXJXkTagEAFOCTkwCQ\nDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMEN\nAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMkQ3ACQDMENAMlM\nDG7bd9k+afvYZhQEAFhfyTvuv5W0v+Y6AACFJgZ3RDwo6cVNqAUAUMARMXmSvSjpcES8bZ05S5KW\nJKnZbO7rdrsbKujo6qmR43sXdm9of+fCuoPBQI1GY+q1s1uvd6OOuXm+dNnFo79n2h6NWztTr8cd\nw8kXT+l7/7PJxaxjVq/N9f5tNrLGpNfd2agjLzqdzkpEtErmziy4h7Varej3+yVTX2dx+cjI8ROH\nDmxof+fCur1eT+12e+q1s1uvd6OO+ba9p3XwAzcVz9/I2pl6Pe4Y/vKeL+jPj+7c5GrGm9Vrc71/\nm42sMel1dzbqyAvbxcHNVSUAkAzBDQDJlFwO+HlJ/ybpKtvfsf2R+ssCAIwz8URZRLx/MwoBAJTh\nVAkAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcA\nJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJENwA0AyBDcAJFMU\n3Lb3237G9rO2l+suCgAw3sTgtr1D0mckvUfS1ZLeb/vqugsDAIxW8o77WknPRsRzEfGqpK6km+ot\nCwAwTklwL0j69tD971RjAIA5cESsP8F+n6T9EfHR6v4tkn4xIj52xrwlSUvV3askPTP7ctO6RNIL\n8y4iAfpUhj6Vydann42IS0sm7iyYsyrpiqH7e6qx14iIOyTdUVTeNmO7HxGteddxrqNPZehTma3c\np5JTJf8u6a22r7T9Rkk3S/pivWUBAMaZ+I47Ik7b/pikr0raIemuiHiy9soAACOVnCpRRHxJ0pdq\nrmUr4xRSGfpUhj6V2bJ9mvjLSQDAuYWPvANAMgT3Bti+y/ZJ28eGxi62fb/tb1Zf3zL02O3Vnwt4\nxvavD43vs320euwvbHuzj6VOtq+w/YDtp2w/afvWapxeDbF9nu1HbD9R9ekT1Th9GsH2DtuP2T5c\n3d9+fYoIblPeJL1L0jskHRsa+zNJy9X2sqQ/rbavlvSEpDdJulLSf0raUT32iKR3SrKkL0t6z7yP\nbcZ9ulzSO6rtCyX9R9UPevXaPllSo9reJenh6ljp0+h+/a6kz0k6XN3fdn3iHfcGRMSDkl48Y/gm\nSXdX23dL+o2h8W5E/CAiviXpWUnX2r5c0psj4qFYeyb93dD3bAkR8XxEPFptvyzpuNY+dUuvhsSa\nQXV3V3UL0afXsb1H0gFJdw4Nb7s+Edyz04yI56vt70pqVtvj/mTAQrV95viWZHtR0jVaezdJr85Q\n/fj/uKSTku6PCPo02qckfVzSj4bGtl2fCO4aVP8V53Kdiu2GpH+S9DsR8dLwY/RqTUT8MCJ+QWuf\nTL7W9tvOeHzb98n2jZJORsTKuDnbpU8E9+x8r/oRTNXXk9X4uD8ZsFptnzm+pdjepbXQvici7q2G\n6dUYEfF9SQ9I2i/6dKbrJL3X9gmt/ZXS623/vbZhnwju2fmipA9V2x+S9IWh8Zttv8n2lZLeKumR\n6ke7l2y/s/qN9m8Ofc+WUB3XZyUdj4hPDj1Er4bYvtT2RdX2+ZLeLelp0afXiIjbI2JPRCxq7U9v\nfC0iPqjt2Kd5/3Y0403S5yU9L+l/tXZ+7COSflrSv0j6pqR/lnTx0Pw/0NpvtJ/R0G+vJbUkHase\n+ytVH4jaKjdJv6y1H1u/Ienx6nYDvXpdn35e0mNVn45J+qNqnD6N71lbP7mqZNv1iU9OAkAynCoB\ngGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBIhuAGgGQIbgBI5v8AeTOTk0mW60kAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xa461c50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "data['TIMEFRAME'].unique()"
+    "data['ELEV'].hist(bins=50)\n"
    ]
   },
   {
@@ -465,25 +525,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-29-b9ce25285990>, line 23)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-29-b9ce25285990>\"\u001b[1;36m, line \u001b[1;32m23\u001b[0m\n\u001b[1;33m    fg.add_child(folium.GeoJson(data=open('world.json','r',encoding='utf-8-sig)))\u001b[0m\n\u001b[1;37m                                                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "import folium\n",
     "import pandas as pd\n",
+    "def color_producer(elevation):\n",
+    "    if elevation<1000:\n",
+    "        return \"green\"\n",
+    "    elif elevation<3000:\n",
+    "        return \"orange\"\n",
+    "    else:\n",
+    "        return 'red'\n",
     "\n",
     "map1=folium.Map([38,-100],zoom_start=6,tiles=\"Mapbox Bright\")\n",
     "\n",
     "data=pd.read_csv(\"Volcanoes.txt\")\n",
     "lat=list(data[\"LAT\"])\n",
     "lon=list(data[\"LON\"])\n",
+    "elev=list(data[\"ELEV\"])\n",
     "\n",
     "fg=folium.FeatureGroup(name=\"my_map\")\n",
-    "for lt,ln in zip(lat,lon):\n",
-    "    fg.add_child(folium.Marker(location=[lt,ln],popup=\"My car is here\",icon=folium.Icon(\"green\")))\n",
+    "for lt,ln,el in zip(lat,lon,elev):\n",
+    "    fg.add_child(folium.Marker(location=[lt,ln],popup=str(el)+\" m\",icon=folium.Icon(color_producer(el))))\n",
+    "    #fg.add_child(folium.CircleMarker(location[lt,ln],popup=str(el)+\"m\",fill=True,radius=6,color='grey',fill_opacity=0.7,fill_color=(color_producer(el))))\n",
+    "                 \n",
+    "fg.add_child(folium.GeoJson(data=open('world.json','r',encoding='utf-8-sig)))         \n",
     "map1.add_child(fg)\n",
     "map1.save(\"map1.html\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
